# Git-Reviewer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts
.github/workflows/: release.yml
docs/plans/: 2026-04-13-copy-button-feedback-design.md  2026-04-13-copy-button-feedback-implementation.md  2026-04-13-cross-platform-release-ci-design.md  2026-04-13-cross-platform-release-ci-implementation.md  2026-04-13-inline-comment-thread-design.md  2026-04-13-inline-comment-thread-implementation.md  2026-04-13-local-changes-commit-review-implementation.md
skills/karpathy-guidelines/: SKILL.md
src/: error.rs  lib.rs  main.rs
src/application/: default_base_branch.rs  mod.rs
src/bootstrap/: app.rs  http_server.rs  mod.rs  repo_target.rs
src/domain/: mod.rs  repo.rs  review.rs
tests/: cli_smoke.rs  git_cli.rs  http_api.rs  review_use_cases.rs  use_cases.rs
tests/e2e/: review-shell-clipboard-refresh.spec.ts  review-shell-comments.spec.ts  review-shell-navigation.spec.ts  review-shell-ux-enhancements.spec.ts
tests/support/: git_repo.rs
tests/use_cases/: load_repo_context.rs  load_review_commits.rs
web/: app.js  index.html  styles.css  tree-and-highlight.css
web/adapters/: dom-renderer-helpers.js  dom-renderer.js  http-review-port.js
web/core/: comment-store.js  file-tree.js  review-comments.js  review-preferences.js  review-shell-state.js  syntax-highlight.js
web/ports/: review-port.js
web/use-cases/: empty-review.js  export-comments.js  load-shell.js  reload-shell.js  review-request.js  review-state-reset.js  (+4 more)
(+19 files in other folders)
