[package]
name = "git-reviewer"
version = "0.1.4"
edition = "2021"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.38", features = ["derive"] }
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["trace"] }

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.23.0"
tower = "0.5.2"
